fixed on safari height doesnt good

--- a/src/micropueUI.scss
+++ b/src/micropueUI.scss
@@ -25,11 +25,13 @@
     font-family: apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
 }
-
+html{
+    height:100%;
+}
 body {
     cursor: default;
     display: flex;
-    height: calc(100vh - env(safe-area-inset-bottom));
+    height: 100%;
     width: 100%;
     background-color: var(--bgcolor);
     overflow: hidden;
